[fix] gradleを整理